tests/build/cases/widget_new/incorrect_arg_type2.stderr
error[E0277]: the trait bound `bool: zero_ui::prelude::IntoVar<u32>` is not satisfied
  --> cases/widget_new/incorrect_arg_type2.rs:12:23
   |
12 |         simple_type = true
   |         -----------   ^^^^ the trait `zero_ui::prelude::IntoVar<u32>` is not implemented for `bool`
   |         |
   |         required by a bound introduced by this call
   |
   = help: the following other types implement trait `zero_ui::prelude::IntoVar<T>`:
            <implementers-list>
note: required by a bound in `simple_type::simple_type`
  --> cases/widget_new/incorrect_arg_type2.rs:4:53
   |
4  | pub fn simple_type(child: impl UiNode, simple: impl IntoVar<u32>) -> impl UiNode {
   |                                                     ^^^^^^^^^^^^ required by this bound in `simple_type::simple_type`
